change name to button restart game

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div class="restart">
-                    <button class="restartAction" onclick="restart()">Reiniciar juego</button>
+                    <button class="restartAction" onclick="restart()">Restart game</button>
                 </div>
             </div>
         </div>
