instructions text added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <div class="item">Computer: <span id="scoreC"></span></div>
                 </div>
                 <div class="buttonsContainer">
+                    <h3>Choose an option</h3>
                     <button type="button" value="Rock" onclick="start(this)">Rock</button>
                     <button type="button" value="Paper" onclick="start(this)">Paper</button>
                     <button type="button" value="Scissors" onclick="start(this)">Scissors</button>
